--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ji
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -107,7 +107,7 @@ button:hover{background:#0969c7}
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <script>
-const UPI_ID = 'bestsm123@axl';
+const UPI_ID = 'bestsmm13@naviaxis';
 const MERCHANT_NAME = 'Social Media Booster';
 // Multiple valid UTR prefixes
 const UTR_PREFIXES = ["FMPI","ok","T","UTR","utr"];
